--- a/frontend/src/app/exames/components/formulario-sala/formulario-sala.component.css
+++ b/frontend/src/app/exames/components/formulario-sala/formulario-sala.component.css
@@ -1,7 +1,11 @@
-.ativo{
+.ativo {
     display: block;
-    margin-top: 10px; 
+    margin-top: 0.625rem;
 }
-.sim{
-    margin-right: 5px;
+.sim {
+    margin-right: 0.313rem;
+}
+
+.nao {
+    margin-left: 0.625rem;
 }
