Adicionando mudanças na parte de listagem e de cadastro

--- a/frontend/src/app/internacao/components/dar-alta-ao-paciente/dar-alta-ao-paciente.component.html
+++ b/frontend/src/app/internacao/components/dar-alta-ao-paciente/dar-alta-ao-paciente.component.html
@@ -4,7 +4,7 @@
     </h1>
     <p-tabView>
         <p-tabPanel header="Formulario Dar alta ao Paciente">
-            <app-formulario-dar-alta-ao-paciente (salvarAlta)="AltaSalva($event)"></app-formulario-dar-alta-ao-paciente>
+            <app-formulario-dar-alta-ao-paciente></app-formulario-dar-alta-ao-paciente>
         </p-tabPanel>
     </p-tabView>
 </div>>
