--- a/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
+++ b/frontend/src/app/pacientes/formulario/telefone/paciente-form-telefone.component.html
@@ -1,7 +1,7 @@
 <div class="p-grid p-fluid" [formGroup]="telefone">
     <div class="p-col-10 p-grid">
         <div nDropdown required label="Tipo de Telefone" [options]="opcoesDeTipoDeTelefone" formControlName="tipo" (onChange)="tipoTelefone($event)" class="p-md-2 p-sm-12"></div>
-        <div nDropdown required label="DDD" [service]="dddService" optionLabel="valor" (onChange)="atualizarDDD($event)" class="p-md-2 p-sm-12"></div>
+        <div nAutoComplete required label="DDD" [service]="dddService" field="valor" (onChange)="atualizarDDD($event)" class="p-md-2 p-sm-12"></div>
         <div nInputMask required [mask]="tipoMascara" tooltip="Informe o telefone." label="Telefone" formControlName="numero" class="p-md-2 p-sm-12"></div>
         <div nInputText label="Observação" formControlName="observacao" class="p-md-6 p-sm-12"></div>        
     </div>
