Remover Naturalidade Service e Naturalidade Model do frontend - BASIS-233283

--- a/frontend/src/app/pacientes/formulario/dados-pessoais/paciente-form-dados-pessoais.component.html
+++ b/frontend/src/app/pacientes/formulario/dados-pessoais/paciente-form-dados-pessoais.component.html
@@ -57,7 +57,7 @@
                     [disabled]="!formGroup.value.ufId"
                     field="nome"
                     [onHide]="onHideAutocomplete()"
-                    [suggestions]="naturalidades"
+                    [suggestions]="municipios"
                     [dropdown]="true"
                     formControlName="naturalidadeId">
                 </p-autoComplete>
