--- a/frontend/src/app/pacientes/formulario/responsavel/paciente-form-responsavel.component.html
+++ b/frontend/src/app/pacientes/formulario/responsavel/paciente-form-responsavel.component.html
@@ -3,5 +3,7 @@
         <div nInputText label="Nome do Responsável" formControlName="nomeDoResponsavel" class="p-md-6 p-sm-12"></div>
         <div nAutoComplete [service]="grauDeParentescoService" field="valor" formControlName="grauDeParentescoId" label="Grau de Parentesco" class="p-md-6 p-sm-12"></div>
     </div>
-    <paciente-form-telefone [telefones]="formGroup.get('responsavel.telefones')" class="p-md-12"> </paciente-form-telefone>
+
+    <app-telefone [telefones]="formGroup.get('responsavel.telefones')" class="p-md-12" ></app-telefone>
+
 </div>
